--- a/admin/scss/rexlive/rexbuilder-live/tools/_block-tools.scss
+++ b/admin/scss/rexlive/rexbuilder-live/tools/_block-tools.scss
@@ -8,30 +8,27 @@
   // display: none;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 300ms;
+  transition: opacity 300ms; 
+  z-index: -2000;
   
   font-size: 10px;
   @include live-fonts();
 
   &.top-tools {
     top: 0;
-    z-index: 50;
+    // z-index: 50;
     transform: translateY(-50%);
   }
 
   &.bottom-tools {
     bottom: 20px;
-    z-index: 50;
+    // z-index: 50;
   }
 
+  // Maybe deprecated (to check)
   &.floating-tools {
     top: 0;
     z-index: 10;
-  }
-  
-  .focused & {
-    opacity: 1;
-    visibility: visible;
   }
 
   .rexlive-top-block-tools {
@@ -93,6 +90,21 @@
   &[data-layout="masonry"] {
     .el-size-viewer__um {
       display: inline;
+    }
+  }
+}
+
+.focused {
+  .rexlive-block-toolbox {
+    opacity: 1;
+    visibility: visible;
+
+    &.top-tools {
+      z-index: 50;
+    }
+
+    &.bottom-tools {
+      z-index: 50;
     }
   }
 }
